# braitenberg__vehicle_navigation

./: README.md
Models/: nano.save
ROS_Plugins/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ROS_Plugins/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ROS_Plugins/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
ROS_Plugins/catkin_ws/devel/.private/husky_follow_light/: .catkin  local_setup.sh  setup.sh
ROS_Plugins/catkin_ws/devel/.private/husky_gazebo_plugins/: .catkin  .rosinstall  local_setup.sh  setup.sh
ROS_Plugins/catkin_ws/devel/include/husky_follow_light/: PerformAction.h  PerformActionRequest.h  PerformActionResponse.h
ROS_Plugins/catkin_ws/devel/include/husky_gazebo_plugins/: GetHuskyJointStates.h  GetHuskyJointStatesRequest.h  GetHuskyJointStatesResponse.h  GetHuskyOdometry.h  GetHuskyOdometryRequest.h  GetHuskyOdometryResponse.h  SetHuskyCmdVel.h  SetHuskyCmdVelRequest.h  SetHuskyCmdVelResponse.h  SetHuskyWheelSpeeds.h  SetHuskyWheelSpeedsRequest.h  SetHuskyWheelSpeedsResponse.h  (+1 more)
ROS_Plugins/catkin_ws/logs/husky_follow_light/: build.check.000.log.stderr
ROS_Plugins/catkin_ws/src/husky_follow_light/: CMakeLists.txt  README.md  setup.py
ROS_Plugins/catkin_ws/src/husky_follow_light/launch/: navigate_maze.launch
ROS_Plugins/catkin_ws/src/husky_follow_light/nodes/: control_node.py  image_processing_node.py  lights_switcher.py  motor_control_node.py
ROS_Plugins/catkin_ws/src/husky_follow_light/src/smach_states/: __init__.py
(+85 files in other folders)
